--- a/handout-2018-10-5.md
+++ b/handout-2018-10-5.md
@@ -14,7 +14,8 @@
         * パソコンで電卓を開く，エクセルを開くよりPython使ったほうが計算が楽という気軽さまでもっていく。2回生で学んで次に扱うのが4回後期の卒業研究時やM1以降となると忘れるため，ほかの授業でも自主的に継続的に利用できるようになりたい。
         * 学生の進捗度に差ができやすいため，できる学生ができない学生に教えることを積極的に勧める。80人に教師1人TA2～3人だとそのような協力が不可欠。またTAも必ずしもできるとは限らない。 
     * # 10月の授業内容（サマリー）
-        * ## 学ぶ順番  いきなり専門分野の処理をするのは難しい（意味不明な__写経__になる）ので，以下の順番でやるのが躓きにくくていいだろう。
+        * ## 学ぶ順番
+            いきなり専門分野の処理をするのは難しい（意味不明な**写経**になる）ので，以下の順番でやるのが躓きにくくていいだろう。
             * プログラミング面白い，興味を持つようにする（Processingを用いた導入）  
                 https://processing.org/
             * Pythonの基本的な部分をウェブサービスを用いて独学する方法を教える。すでにできる人はプロググラミングコンテストするのがよいだろう。  
@@ -25,7 +26,8 @@
             * 専門分野の処理やその一歩手前の数理的処理を扱う
             * 描画ライブラリ(matplotlib)やファイル・データ入出力(txtファイルの読み書きやcsvの扱い，pandas。)を用いてより自由になる。
             * サードパーティソフトウェアによるプログラミング，手続型処理。とくにRhinoceros+Grasshopper, Houdiniを扱うことを導入する。
-        * ## 学ぶ（学びたい）内容  10月の4回でどこまでいけるか。進捗と興味に合わせて考えます。基礎をしっかり作るほうが後で応用しやすい。
+        * ## 学ぶ（学びたい）内容
+            10月の4回でどこまでいけるか。進捗と興味に合わせて考えます。基礎をしっかり作るほうが後で応用しやすい。
             * Pythonの基本的な文法
             * NumPyをはじめとした外部ライブラリを使ってみる
             * 簡単な数学，統計
@@ -56,11 +58,12 @@
                 意欲的な学生はどんどん進めるように。  
                 重要なのは毎日少しずつ進むこと。
     * ### （閑話休題）プログラミングがうまくなる・PCと友達になるためのコツ
-        * __私用（ラップトップ）PCを入手すること。__毎日触れる。BYOD（Bring Your Own Device）。どんなパソコンがいいのかわからなければ相談にのる。
-        * __タッチタイピング__。無料の練習サイトやchromeのアプリなどある。
-        * __海賊版はダメ__。お金稼ぐ・スポンサーをみつけて払うこと。もしくはお金なければなくてもできる方法さがすこと。自分で買ったソフトは絶対に身に付く。学生版でできるうちに。
-        * __本番で覚えながら使う。__練習してマスターしてから本番を迎えるのだと，技術の流れが速いので追いつけない。
-    * # 授業内容詳細　本日分  大きく分けて3つです。  デモンストレーションしながら見せるので，覚えられなければメモ写真動画とってください。画面見えなければ見えるところまできてください。
+        * **私用（ラップトップ）PCを入手すること。**毎日触れる。BYOD（Bring Your Own Device）。どんなパソコンがいいのかわからなければ相談にのる。
+        * **タッチタイピング**。無料の練習サイトやchromeのアプリなどある。
+        * **海賊版はダメ**。お金稼ぐ・スポンサーをみつけて払うこと。もしくはお金なければなくてもできる方法さがすこと。自分で買ったソフトは絶対に身に付く。学生版でできるうちに。
+        * **本番で覚えながら使う。**練習してマスターしてから本番を迎えるのだと，技術の流れが速いので追いつけない。
+    * # 授業内容詳細　
+        本日分<br>大きく分けて3つです。<br>デモンストレーションしながら見せるので，覚えられなければメモ写真動画とってください。画面見えなければ見えるところまできてください。
         * ## Processing（20分程度）
             * https://processing.org/
             * ### 説明
@@ -108,17 +111,18 @@
                 * アプリケーションを実行する。
                 * サインインを求められたら，取得したGitHubアカウントを入力してサインインします。  
                     Sign in to GitHub Desktopの方。Enterpriseではない。
-            * ### 課題をやる。181005attendance課題。  締切：10/5授業中18:00まで
+            * ### 課題をやる。181005attendance課題。
+                締切：10/5授業中18:00まで
                 * *★ブラウザ（Chrome推奨）を開きます*
-                    * 次のURLにアクセスする。アクセスすると宿題用の「__リポジトリ__」（ファイル置き場のようなもの）が，授業グループのアカウントの持ち物として生成されます。
+                    * 次のURLにアクセスする。アクセスすると宿題用の「**リポジトリ**」（ファイル置き場のようなもの）が，授業グループのアカウントの持ち物として生成されます。
                     * https://classroom.github.com/a/JF2iMOfn
                 * *★GitHub Desktopを開きます*
-                    * 生成されたリポジトリを__Fork__する。フォークとは，他人のリポジトリを自分のリポジトリとしてコピーして持ってくるようなことです。ブラウザ上の右上の方にForkとありますので，押します。
-                    * 自分のPCに__clone__する。クローンとは，ウェブサーバー上にあるリポジトリを自分の今ここにあるローカルのPCにコピーすることです。GitHubDesktopアプリからfile->clone repositoryで選択できます。今回はyour repositoryの中のものを選びます。
+                    * 生成されたリポジトリを**Fork**する。フォークとは，他人のリポジトリを自分のリポジトリとしてコピーして持ってくるようなことです。ブラウザ上の右上の方にForkとありますので，押します。
+                    * 自分のPCに**clone**する。クローンとは，ウェブサーバー上にあるリポジトリを自分の今ここにあるローカルのPCにコピーすることです。GitHubDesktopアプリからfile->clone repositoryで選択できます。今回はyour repositoryの中のものを選びます。
                     * クローンするとデフォルトで設定されているフォルダにリポジトリがコピーされています。アプリの「repository」メニューからShow in Exploreで開けます。
                     * 課題に取り組みます。何をやればいいかはReadmeファイルなどを読んでください。`.md`というマークダウン形式で書かれていたりもしますが，Atomやメモ帳で開けます。
-                    * 課題の通りにファイルを編集して__commit__する。コミットとは変更を登録することです。何回でもできます。コミットはどのような変更をしたのか未来の自分や他人にわかるようにサマリーを記入し，Commit to xxxxを押します。
-                    * 課題が完了したら，__Push__します。プッシュとはローカルでの変更をサーバー上のリポジトリに上げることです。プッシュしておけば，他のPCで開いても同期できます。
+                    * 課題の通りにファイルを編集して**commit**する。コミットとは変更を登録することです。何回でもできます。コミットはどのような変更をしたのか未来の自分や他人にわかるようにサマリーを記入し，Commit to xxxxを押します。
+                    * 課題が完了したら，**Push**します。プッシュとはローカルでの変更をサーバー上のリポジトリに上げることです。プッシュしておけば，他のPCで開いても同期できます。
                 * *★ブラウザを開きます*
                     * GitHub Desktopアプリの右上の方にPush xxx と書いてありますので押します。
                     * フォーク元のリポジトリにPull Requestを送って課題提出します。プルリクエストとは，フォークしてコピーしてきたリポジトリの変更を，元の持ち主のリポジトリに知らせることです。プルリクと略していいます。
